[package]
name = "avalanche-network-runner-sdk"
version = "0.3.0"
edition = "2021"
rust-version = "1.64"
publish = true
description = "avalanche-network-runner-sdk in Rust"
license = "BSD-3-Clause"
homepage = "https://avax.network"
repository = "https://github.com/ava-labs/avalanche-network-runner-sdk-rs"

[dependencies]
log = "0.4.17"
prost = "0.11.0"
prost-types = "0.11.1"
serde = { version = "1.0.147", features = ["derive"] }
serde_json = "1.0.87"
tokio = { version = "1.21.2", features = ["fs", "rt-multi-thread"] }
tokio-stream = { version = "0.1.11", features = ["net"] }
tonic = "0.8.2"

[build-dependencies]
# ref. https://github.com/hyperium/tonic/tree/master/tonic-build
tonic-build = "0.8.0"

[dev-dependencies]
assert-json-diff = "2.0.2"
env_logger = "0.9.1"

# serde_json is used in examples but fails cargo-udeps
[package.metadata.cargo-udeps.ignore]
normal = [ "serde_json" ]
