[package]
name = "avalanche-network-runner-sdk"
version = "0.3.2" # https://crates.io/crates/avalanche-network-runner-sdk
edition = "2021"
rust-version = "1.71"
publish = true
description = "avalanche-network-runner-sdk in Rust"
license = "BSD-3-Clause"
homepage = "https://avax.network"
repository = "https://github.com/ava-labs/avalanche-network-runner-sdk-rs"

[dependencies]
log = "0.4.20"
prost = "0.11.9"
prost-types = "0.11.9"
serde = { version = "1.0.183", features = ["derive"] }
serde_json = "1.0.104"
tokio = { version = "1.31.0", features = ["fs", "rt-multi-thread"] }
tokio-stream = { version = "0.1.14", features = ["net"] }
tonic = "0.9.2"

[build-dependencies]
# ref. https://github.com/hyperium/tonic/tree/master/tonic-build
tonic-build = "0.9.2"

[dev-dependencies]
assert-json-diff = "2.0.2"
env_logger = "0.10.0"

# serde_json is used in examples but fails cargo-udeps
[package.metadata.cargo-udeps.ignore]
normal = [ "serde_json" ]
