[package]
name = "avalanche-network-runner-sdk"
version = "0.3.4" # https://crates.io/crates/avalanche-network-runner-sdk
edition = "2021"
rust-version = "1.70"
publish = true
description = "avalanche-network-runner-sdk in Rust"
license = "BSD-3-Clause"
homepage = "https://avax.network"
repository = "https://github.com/ava-labs/avalanche-network-runner-sdk-rs"

[dependencies]
log = "0.4.20"
prost = "0.12.3"
prost-types = "0.12.3"
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.104"
tokio = { version = "1.36.0", features = ["fs", "rt-multi-thread"] }
tokio-stream = { version = "0.1.14", features = ["net"] }
tonic = "0.11.0"

[build-dependencies]
# ref. https://github.com/hyperium/tonic/tree/master/tonic-build
tonic-build = "0.11.0"

[dev-dependencies]
assert-json-diff = "2.0.2"
env_logger = "0.11.2"

# serde_json is used in examples but fails cargo-udeps
[package.metadata.cargo-udeps.ignore]
normal = [ "serde_json" ]
