[package]
name = "e2e"
version = "0.0.0"
edition = "2021"
rust-version = "1.60"
publish = false
description = "Avalanche network-runner SDK E2E tests"
license = "BSD-3-Clause"
homepage = "https://avax.network"

[dependencies]

[dev-dependencies]
avalanche-network-runner-sdk = { path = "../../avalanche-network-runner-sdk" }
avalanche-proto = { version = "0.15.1", features= ["rpcpb"] }
env_logger = "0.9.0"
log = "0.4.17"
serde_json = "1.0.81"
tokio = { version = "1.18.1", features = [] }
