[package]
name = "e2e"
version = "0.0.0"
edition = "2021"
rust-version = "1.71"
publish = false
description = "Avalanche network-runner SDK E2E tests"
license = "BSD-3-Clause"
homepage = "https://avax.network"

[dependencies]

[dev-dependencies]
avalanche-network-runner-sdk = { path = "../../avalanche-network-runner-sdk" }
env_logger = "0.10.0"
log = "0.4.20"
serde_json = "1.0.104"
tokio = { version = "1.31.0", features = [] }
